# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: generate_diff.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/modules/: get_dict_by_format.py  get_keys.py  parse.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py  test_get_dict_by_format.py  test_get_keys.py  test_parse.py  test_stylish.py
tests/fixtures/: data_test.py
tests/test_data/: test_data.py
